fix language dropdown on mobile

--- a/client/components/common/language.less
+++ b/client/components/common/language.less
@@ -1,5 +1,7 @@
 #lang_menu {
-  padding-left: 0;
+  @media (min-width: 768px) {
+    padding-left: 0;
+  }
 
   img {
     width: 25px;
